--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@ div.cls_003{font-family:Arial,serif;font-size:11.1px;color:rgb(0,255,0);font-wei
 <div style="position:absolute;left:72.06px;top:219.44px" class="cls_003"><span class="cls_003">Para empezar a crear el site de node vamos a copiar el archivo de sitioPhp y lo vamos a</span></div>
 <div style="position:absolute;left:72.06px;top:234.45px" class="cls_003"><span class="cls_003">configurar para que se ajuste a los requerimientos del site de node</span></div>
 <div style="position:absolute;left:72.06px;top:282.49px" class="cls_003"><span class="cls_003">Esta es la configuracion que demomento debe quedar</span></div>
-<div style="position:absolute;left:72.06px;top:606.76px" class="cls_003"><span class="cls_003">Se ha establecido la carpeta /var/www/sitioNode como la zona donde esta el contenido de la</span></div>
-<div style="position:absolute;left:72.06px;top:621.78px" class="cls_003"><span class="cls_003">web. Se ha establecido una redireccion en /documentación que te lleva a la pagina de</span></div>
-<div style="position:absolute;left:72.06px;top:636.79px" class="cls_003"><span class="cls_003">documentación de node. Se ha inidicado la ruta donde se guardara el fichero de logs.</span></div>
-<div style="position:absolute;left:72.06px;top:651.80px" class="cls_003"><span class="cls_003">Finalmente hemos habilitado el AllowOverride para poder crear un .htaccess</span></div>
-<div style="position:absolute;left:72.06px;top:711.85px" class="cls_003"><span class="cls_003">Vamos a crear un archivo de contraseñas</span></div>
+<div style="position:absolute;left:72.06px;top:666.06px" class="cls_003"><span class="cls_003">Se ha establecido la carpeta /var/www/sitioNode como la zona donde esta el contenido de la</span></div>
+<div style="position:absolute;left:72.06px;top:681.08px" class="cls_003"><span class="cls_003">web. Se ha establecido una redireccion en /documentación que te lleva a la pagina de</span></div>
+<div style="position:absolute;left:72.06px;top:696.09px" class="cls_003"><span class="cls_003">documentación de node. Se ha inidicado la ruta donde se guardara el fichero de logs.</span></div>
+<div style="position:absolute;left:72.06px;top:711.10px" class="cls_003"><span class="cls_003">Finalmente hemos habilitado el AllowOverride para poder crear un .htaccess</span></div>
 </div>
 <div style="position:absolute;left:50%;margin-left:-298px;top:2559px;width:596px;height:843px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
 <img src="assets/background4.jpg" width=596 height=843></div>
-<div style="position:absolute;left:72.06px;top:139.87px" class="cls_003"><span class="cls_003">Vamos a crear el documento public_files y dentro de el vamos a crear un .htaccess con las</span></div>
-<div style="position:absolute;left:72.06px;top:154.88px" class="cls_003"><span class="cls_003">directivas necesarias para la autorización.</span></div>
-<div style="position:absolute;left:72.06px;top:323.78px" class="cls_003"><span class="cls_003">Para realizar el enrutamiento del puerto 81 al 3000 que es done tendremos funcionando</span></div>
-<div style="position:absolute;left:72.06px;top:338.79px" class="cls_003"><span class="cls_003">nuestro nodejs vamos a activar el modulo de proxy</span></div>
-<div style="position:absolute;left:72.06px;top:518.94px" class="cls_003"><span class="cls_003">Y vamos a configurar el site agregando estas directivas</span></div>
-<div style="position:absolute;left:72.06px;top:612.77px" class="cls_003"><span class="cls_003">Con todo configurado vamos a crear el servidor de node</span></div>
+<div style="position:absolute;left:72.06px;top:86.58px" class="cls_003"><span class="cls_003">Vamos a crear un archivo de contraseñas</span></div>
+<div style="position:absolute;left:72.06px;top:169.90px" class="cls_003"><span class="cls_003">Vamos a crear el documento public_files y dentro de el vamos a crear un .htaccess con las</span></div>
+<div style="position:absolute;left:72.06px;top:184.91px" class="cls_003"><span class="cls_003">directivas necesarias para la autorización.</span></div>
+<div style="position:absolute;left:72.06px;top:371.07px" class="cls_003"><span class="cls_003">Para realizar el enrutamiento del puerto 81 al 3000 que es done tendremos funcionando</span></div>
+<div style="position:absolute;left:72.06px;top:386.08px" class="cls_003"><span class="cls_003">nuestro nodejs vamos a activar el modulo de proxy</span></div>
+<div style="position:absolute;left:72.06px;top:566.23px" class="cls_003"><span class="cls_003">Y vamos a configurar el site agregando estas directivas</span></div>
+<div style="position:absolute;left:72.06px;top:660.06px" class="cls_003"><span class="cls_003">Con todo configurado vamos a crear el servidor de node</span></div>
 </div>
 <div style="position:absolute;left:50%;margin-left:-298px;top:3412px;width:596px;height:843px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
@@ -86,21 +86,22 @@ div.cls_003{font-family:Arial,serif;font-size:11.1px;color:rgb(0,255,0);font-wei
 <div style="position:absolute;left:50%;margin-left:-298px;top:5118px;width:596px;height:843px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
 <img src="assets/background7.jpg" width=596 height=843></div>
-<div style="position:absolute;left:72.06px;top:86.58px" class="cls_003"><span class="cls_003">GOACCESS</span></div>
-<div style="position:absolute;left:72.06px;top:139.87px" class="cls_003"><span class="cls_003">Lo primero que necesitamos es configurar algunos formatos en el fichero /etc/goaccess.conf</span></div>
-<div style="position:absolute;left:72.06px;top:154.88px" class="cls_003"><span class="cls_003">El formato que yo he configurado es similar al formato combined de apache (Es necesario</span></div>
-<div style="position:absolute;left:72.06px;top:169.90px" class="cls_003"><span class="cls_003">que el formato sea el mismo asi que he vuelo a poner el formato combined a los logs del</span></div>
-<div style="position:absolute;left:72.06px;top:184.91px" class="cls_003"><span class="cls_003">servidor de node)</span></div>
-<div style="position:absolute;left:72.06px;top:199.92px" class="cls_003"><span class="cls_003">En el archivo de configuración tenemos que descomentar los formatos que vamos a usar</span></div>
-<div style="position:absolute;left:72.06px;top:383.83px" class="cls_003"><span class="cls_003">Ahora para poder ver en nuestro servidor el reporte vamos a crear la carpeta log_sistem y</span></div>
-<div style="position:absolute;left:72.06px;top:398.84px" class="cls_003"><span class="cls_003">vamos a configurar para que el proxy ignore esa ruta</span></div>
-<div style="position:absolute;left:72.06px;top:438.62px" class="cls_003"><span class="cls_003">Y ahora ejecutamos este comando</span></div>
-<div style="position:absolute;left:72.06px;top:506.93px" class="cls_003"><span class="cls_003">Despues de acceder al servidor para generar reportes accedemos a</span></div>
-<div style="position:absolute;left:72.06px;top:521.94px" class="cls_003"><span class="cls_003"> </span><A HREF="http://localhost:81/log_sistem/">http://localhost:81/log_sistem/</A> </div>
+<div style="position:absolute;left:72.06px;top:86.58px" class="cls_003"><span class="cls_003">Si quitamos el index.html podremos visualizar el contenido</span></div>
+<div style="position:absolute;left:72.06px;top:322.28px" class="cls_003"><span class="cls_003">GOACCESS</span></div>
+<div style="position:absolute;left:72.06px;top:375.57px" class="cls_003"><span class="cls_003">Lo primero que necesitamos es configurar algunos formatos en el fichero /etc/goaccess.conf</span></div>
+<div style="position:absolute;left:72.06px;top:390.58px" class="cls_003"><span class="cls_003">El formato que yo he configurado es similar al formato combined de apache (Es necesario</span></div>
+<div style="position:absolute;left:72.06px;top:405.60px" class="cls_003"><span class="cls_003">que el formato sea el mismo asi que he vuelo a poner el formato combined a los logs del</span></div>
+<div style="position:absolute;left:72.06px;top:420.61px" class="cls_003"><span class="cls_003">servidor de node)</span></div>
+<div style="position:absolute;left:72.06px;top:435.62px" class="cls_003"><span class="cls_003">En el archivo de configuración tenemos que descomentar los formatos que vamos a usar</span></div>
+<div style="position:absolute;left:72.06px;top:619.52px" class="cls_003"><span class="cls_003">Ahora para poder ver en nuestro servidor el reporte vamos a crear la carpeta log_sistem y</span></div>
+<div style="position:absolute;left:72.06px;top:634.54px" class="cls_003"><span class="cls_003">vamos a configurar para que el proxy ignore esa ruta</span></div>
+<div style="position:absolute;left:72.06px;top:674.32px" class="cls_003"><span class="cls_003">Y ahora ejecutamos este comando</span></div>
 </div>
 <div style="position:absolute;left:50%;margin-left:-298px;top:5971px;width:596px;height:843px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
 <img src="assets/background8.jpg" width=596 height=843></div>
+<div style="position:absolute;left:72.06px;top:71.57px" class="cls_003"><span class="cls_003">Despues de acceder al servidor para generar reportes accedemos a</span></div>
+<div style="position:absolute;left:72.06px;top:86.58px" class="cls_003"><span class="cls_003"> </span><A HREF="http://localhost:81/log_sistem/">http://localhost:81/log_sistem/</A> </div>
 </div>
 
 </body>
